// Protocol generated by excelconfc. DO NOT EDIT.
// source:
//   file: ExcelConfTest.xlsx
//   sheet: ActConf

syntax = "proto3";

package excelconf;

option go_package = "git.woa.com/modnarshen/uasvr-go/configs/excelconf;excelconf";

enum ActType {
    ACT_TYPE_CHECK_IN = 1;
    ACT_TYPE_B = 2;
    ACT_TYPE_C = 3;
    ACT_TYPE_D = 4;
}

enum OpenCond {
    OPEN_COND_A = 1;
    OPEN_COND_B = 2;
    OPEN_COND_C = 3;
}

enum ActTaskTargetType {
    ACT_TASK_TAR_TYPE_LOGIN = 1;
}

message ActConf {
    uint32 act_id = 1;
    string title = 2;
    ActType act_type = 3;
    string begin_time = 4;
    string end_time = 5;
}
