// Protocol generated by excelconfc. DO NOT EDIT.
// source:
//   file: ExcelConfTest.xlsx
//   sheet: ActTaskConf

syntax = "proto3";

package excelconf;

option go_package = "git.woa.com/modnarshen/uasvr-go/configs/excelconf;excelconf";

message AwardItem {
    uint32 item_id = 1;
    uint32 num = 2;
}

message ActTaskConf {
    uint32 task_id = 1;
    string title = 2;
    uint32 target_id = 3;
    uint32 target_type = 4;
    uint32 progress = 5;
    repeated AwardItem awards = 6;
}
