// Protocol generated by excelconfc. DO NOT EDIT.
// source:
//   file: ExcelConfTest.xlsx
//   sheet: ArrayAndBDTVecConf

syntax = "proto3";

package excelconf;

option go_package = "git.woa.com/modnarshen/uasvr-go/configs/excelconf;excelconf";

message IntStruct {
    repeated int32 iVec = 1;
    int32 iArray = 2;
}

message ArrayAndBDTVecConf {
    int32 id = 1;
    repeated int32 intVec = 2;
    int32 intArray = 3;
    repeated IntStruct intStruct = 4;
}
