// Protocol generated by excelconfc. DO NOT EDIT.
// source:
//   file: ExcelConfTest.xlsx
//   sheet: GroupFlagTestConf

syntax = "proto3";

package excelconf;

option go_package = "git.woa.com/modnarshen/uasvr-go/configs/excelconf;excelconf";

message TaskRef {
    int32 task_id = 1;
}

message ClientTaskResource {
    int32 task_id = 1;
    int32 new_task_id = 2;
    string desc = 3;
}

message GroupFlagTestConf {
    int32 id = 1;
    repeated TaskRef task_ref_vec = 2;
    ClientTaskResource hot_update_item = 3;
    int64 act_id = 4;
}
