// Protocol generated by excelconfc. DO NOT EDIT.
// source:
//   file: ExcelConfTest.xlsx
//   sheet: NestFieldsTestConf

syntax = "proto3";

package excelconf;

option go_package = "git.woa.com/modnarshen/uasvr-go/configs/excelconf;excelconf";

message TypeAA {
    int32 aa1 = 1;
    string aa2 = 2;
}

message TypeA {
    int32 a1 = 1;
    int32 a2 = 2;
    repeated TypeAA AA = 3;
    string a3 = 4;
}

message TypeB {
    int32 b1 = 1;
    int32 b2 = 2;
    string b3 = 3;
}

message NestFieldsTestConf {
    int32 id = 1;
    repeated TypeA A = 2;
    TypeB B = 3;
    int64 C = 4;
}
